# Becarios

./: .gitignore  CMakeLists.txt  README.md
include/: Becario.h  Edificio.h  Entorpecedor.h  Jefe.h  Personal.h  Rol.h  Tarea.h
src/: CMakeLists.txt  Main.cpp
src/ProgramLibraries/: Becario.cpp  Edificio.cpp  Entorpecedor.cpp  Jefe.cpp  Personal.cpp  Rol.cpp  Tarea.cpp
