# Agregar los archivos fuente de la biblioteca
add_library(Becario ProgramLibraries/Becario.cpp)
add_library(Edificio ProgramLibraries/Edificio.cpp)
add_library(Entorpecedor ProgramLibraries/Entorpecedor.cpp)
add_library(Jefe ProgramLibraries/Jefe.cpp)
#add_library(Tarea ProgramLibraries/Tarea.cpp)

