# # Agregar los archivos fuente de la biblioteca
# add_library(Rol ProgramLibraries/Rol.cpp)
# add_library(Tarea ProgramLibraries/Tarea.cpp)
# add_library(Personal ProgramLibraries/Personal.cpp)
# add_library(Edificio ProgramLibraries/Edificio.cpp)
# add_library(Entorpecedor ProgramLibraries/Entorpecedor.cpp)
# add_library(Jefe ProgramLibraries/Jefe.cpp)


# Agregar los archivos fuente de la biblioteca
add_library(MiBiblioteca
    ProgramLibraries/Rol.cpp
    ProgramLibraries/Tarea.cpp
    ProgramLibraries/Personal.cpp
    ProgramLibraries/Edificio.cpp
    ProgramLibraries/Entorpecedor.cpp
    ProgramLibraries/Jefe.cpp
)



